--- a/.classpath
+++ b/.classpath
@@ -4,7 +4,8 @@
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry exported="true" kind="lib" path="C:/Program Files/antlr-3.2/lib/antlr-3.2.jar"/>
-	<classpathentry kind="lib" path="lib/meta-jb-util-0.17.1.jar"/>
-	<classpathentry kind="lib" path="lib/log4j-1.2.16.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/meta-jb-util-0.17.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="src/resources/log4j.properties"/>
+	<classpathentry exported="true" kind="lib" path="lib/log4j-1.2.16.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
